--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 									<div class="elementor-button-wrapper">
 										<!-- telegram -->
 										<a class="elementor-button elementor-button-link elementor-size-sm"
-											href="#">
+											href="https://t.me/CHINESE_CAT_TUMAO2024">
 											<span class="elementor-button-content-wrapper">
 												<span class="elementor-button-text">telegram</span>
 											</span>
@@ -733,7 +733,7 @@
 									<div class="elementor-button-wrapper">
 										<!-- twitter -->
 										<a class="elementor-button elementor-button-link elementor-size-sm"
-											href="#">
+											href="https://x.com/CHIN_TUMAO">
 											<span class="elementor-button-content-wrapper">
 												<span class="elementor-button-text">twitter</span>
 											</span>
@@ -830,7 +830,7 @@
 									data-id="d31734c" data-element_type="widget" data-widget_type="image.default">
 									<div class="elementor-widget-container">
 										<!-- twitter -->
-										<a href="#">
+										<a href="https://x.com/CHIN_TUMAO">
 											<img loading="lazy" decoding="async" width="500" height="450"
 												src="static/picture/x_orange.svg"
 												class="attachment-large size-large wp-image-219" alt="" /> </a>
@@ -840,7 +840,7 @@
 									data-id="bf24be5" data-element_type="widget" data-widget_type="image.default">
 									<div class="elementor-widget-container">
 										<!-- telegram -->
-										<a href="#">
+										<a href="https://t.me/CHINESE_CAT_TUMAO2024">
 											<img loading="lazy" decoding="async" width="26" height="23"
 												src="static/picture/telegram_orange.svg"
 												class="attachment-large size-large wp-image-218" alt="" /> </a>
