--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 									<div class="elementor-button-wrapper">
 										<!-- pump -->
 										<a class="elementor-button elementor-button-link elementor-size-sm"
-											href="#">
+											href="https://www.pump.fun/41NsEKsA9eWCykKEHG33USYxb8SXXc1BjHHKgAJXpump">
 											<span class="elementor-button-content-wrapper">
 												<span class="elementor-button-text">Buy Now</span>
 											</span>
@@ -784,7 +784,7 @@
 									<div class="elementor-button-wrapper">
 										<!-- pump -->
 										<a class="elementor-button elementor-button-link elementor-size-sm"
-											href="#">
+											href="https://www.pump.fun/41NsEKsA9eWCykKEHG33USYxb8SXXc1BjHHKgAJXpump">
 											<span class="elementor-button-content-wrapper">
 												<span class="elementor-button-text">Buy Now</span>
 											</span>
@@ -850,7 +850,7 @@
 									data-id="30bed35" data-element_type="widget" data-widget_type="image.default">
 									<div class="elementor-widget-container">
 										<!-- pump -->
-										<a href="#">
+										<a href="https://www.pump.fun/41NsEKsA9eWCykKEHG33USYxb8SXXc1BjHHKgAJXpump">
 											<img loading="lazy" decoding="async" width="800" height="847"
 												src="./static/picture/pump.png"
 												class="attachment-large size-large wp-image-223" alt=""
